Bug 70802 - Some borders missing Java2Deme [SNA]
Summary: Some borders missing Java2Deme [SNA]
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-23 16:25 UTC by Clemens Eisserer
Modified: 2013-11-01 14:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
sna (top) compared to uxa (bottom) (15.89 KB, text/plain)
2013-10-23 16:25 UTC, Clemens Eisserer
no flags Details
Java2Demo (415.85 KB, application/octet-stream)
2013-10-23 16:26 UTC, Clemens Eisserer
no flags Details
sna (top) compared to uxa (bottom) (15.89 KB, image/png)
2013-10-23 16:27 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2013-10-23 16:25:41 UTC
Created attachment 88041 [details]
sna (top) compared to uxa (bottom)

When running Java2Demo with the old X11 pipeline, when SNA is enabled certain border lines of panels are missing.

Simply:

java -jar Java2Demo.jar
Comment 1 Clemens Eisserer 2013-10-23 16:26:35 UTC
Created attachment 88042 [details]
Java2Demo
Comment 2 Clemens Eisserer 2013-10-23 16:27:13 UTC
forgot to mention, after starting java2demo you have to click on a specific demo-page in the tab-list, otherwise only the intro animation is shownn
Comment 3 Clemens Eisserer 2013-10-23 16:27:58 UTC
Created attachment 88043 [details]
sna (top) compared to uxa (bottom)
Comment 4 Chris Wilson 2013-10-23 16:30:58 UTC
That looks to be a regression as I don't remember that in the past.
Comment 5 Chris Wilson 2013-10-23 17:25:41 UTC
openjre-jdk-7 (or something like that) I get identical results as shown above for SNA, even after disabling acceleration. That's weird. It rules out a lot of the code, and I am not sure quite what's left...
Comment 6 Chris Wilson 2013-11-01 13:21:50 UTC
PolyRectangle is the operation that is incomplete here.
Comment 7 Chris Wilson 2013-11-01 14:34:47 UTC
commit 5da329735ca79517a326aee002685bf33e8db861
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Nov 1 14:30:14 2013 +0000

    sna: Process all clip boxes when rastering segments
    
    The macro still had buried returns which were no longer valid after the
    translation to handle clipping. They needed to be breaks from the inner
    most loops to the outer clip box instead.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=70802
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.